header completed with pannel

--- a/index.html
+++ b/index.html
@@ -50,6 +50,23 @@
                 <p class="nav-second">Cart</p>
             </div>
         </div>
+
+        <div class="panel">
+            <div class="panel-all border">
+                <i class="fa-solid fa-bars"></i>
+                <p>All</p>
+            </div>
+            <div class="panel-options">
+                <p class="border">Today's Deals</p>
+                <p class="border">Customer Service</p>
+                <p class="border">Gift Cards</p>
+                <p class="border">Sell Items</p>
+                <p class="border">Registry</p>
+            </div>
+            <div class="panel-deals border">
+                Shop deals in Electronics
+            </div>
+        </div>
     </header>
 </body>
 </html>
