--- a/index.html
+++ b/index.html
@@ -68,5 +68,57 @@
             </div>
         </div>
     </header>
+
+    <div class="hero">
+        <div class="hero-msg">
+            <p>
+                You are on amazon.com. You can also shop on Amazon India for millions of products with fast local delivery.
+                <a href="https://www.amazon.in/">Click here to go to amazon.in</a>
+            </p>
+        </div>
+    </div>
+
+    <div class="shop">
+        <div class="box">
+            <h2>Clothes</h2>
+            <img src="./images/box1_image.jpg" class="box-img">
+            <p>See more</p>
+        </div>
+        <div class="box">
+            <h2>Health & Personal Care</h2>
+            <img src="./images/box2_image.jpg" class="box-img">
+            <p>See more</p>
+        </div>
+        <div class="box">
+            <h2>Furniture</h2>
+            <img src="./images/box3_image.jpg" class="box-img">
+            <p>See all deals</p>
+        </div>
+        <div class="box">
+            <h2>Electronics</h2>
+            <img src="./images/box4_image.jpg" class="box-img">
+            <p>See more from Amazon Gadgets</p>
+        </div>
+        <div class="box">
+            <h2>Beauty Picks</h2>
+            <img src="./images/box5_image.jpg" class="box-img">
+            <p>Shop now</p>
+        </div>
+        <div class="box">
+            <h2>Pet Care</h2>
+            <img src="./images/box6_image.jpg" class="box-img">
+            <p>See more</p>
+        </div>
+        <div class="box">
+            <h2>New Arrival In Toys</h2>
+            <img src="./images/box7_image.jpg" class="box-img">
+            <p>Shop now</p>
+        </div>
+        <div class="box">
+            <h2>Discover Fashion Trends</h2>
+            <img src="./images/box8_image.jpg" class="box-img">
+            <p>Explore now</p>
+        </div>
+    </div>
 </body>
 </html>
