--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amazon.com. Spend Less. Smile More</title>
+    <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+
+    <!-- this is header section -->
+
     <header>
         <div class="navbar">
             <div class="nav-logo">
@@ -69,6 +73,8 @@
         </div>
     </header>
 
+    <!-- this is hero section -->
+
     <div class="hero">
         <div class="hero-msg">
             <p>
@@ -120,5 +126,200 @@
             <p>Explore now</p>
         </div>
     </div>
+
+    <!-- this is footer section -->
+
+    <footer>
+        <div class="foot-panel-1">
+            <a href="./index.html">Back to top</a>
+        </div>
+
+        <div class="foot-panel-2">
+            <div class="foot-panel-2-box">
+                <ul>
+                    <h2>Get to Know Us</h2>
+                    <p>Careers</p>
+                    <p>Blog</p>
+                    <p>About Amazon</p>
+                    <p>Investor Relations</p>
+                    <p>Amazon Devices</p>
+                    <p>Amazon Science</p>
+                </ul>
+            </div>
+            <div class="foot-panel-2-box">
+                <ul>
+                    <h2>Make Money with Us</h2>
+                    <p>Sell products on Amazon</p>
+                    <p>Sell on Amazon Business</p>
+                    <p>Sell apps on Amazon</p>
+                    <p>Become an Affiliate</p>
+                    <p>Advertise Your Products</p>
+                    <p>Self-Publish with Us</p>
+                    <p>Host an Amazon Hub</p>
+                    <p>See More Make Money with Us</p>
+                </ul>
+            </div>
+            <div class="foot-panel-2-box">
+                <ul>
+                    <h2>Amazon Payment Products</h2>
+                    <p>Amazon Business Card</p>
+                    <p>Shop with Points</p>
+                    <p>Reload Your Balance</p>
+                    <p>Amazon Currency Converter</p>
+                </ul>
+            </div>
+            <div class="foot-panel-2-box">
+                <ul>
+                    <h2>Let Us Help You</h2>
+                    <p>Amazon and COVID-19</p>
+                    <p>Your Account</p>
+                    <p>Your Orders</p>
+                    <p>Shipping Rates & Policies</p>
+                    <p>Returns & Replacements</p>
+                    <p>Manage Your Content and Devices</p>
+                    <p>Amazon Assistant</p>
+                    <p>Help</p>
+                </ul>
+            </div>
+        </div>
+
+        <div class="foot-panel-3">
+            <img src="./images/amazon_logo.png" alt="logo">
+            <div class="foot-panel-3-select">
+                <i class="fa-solid fa-globe"></i>
+                <p>English</p>
+                <i class="fa-solid fa-caret-down"></i>
+            </div>
+            <div class="foot-panel-3-select select-2">
+                <i class="fa-solid fa-dollar-sign"></i>
+                <p>USD - U.S. Dollar</p>
+            </div>
+            <div class="foot-panel-3-select select-3">
+                <img src="./images/united-states-svgrepo-com.svg" alt="flag">
+                <p>United States</p>
+            </div>
+        </div>
+
+        <div class="foot-panel-4">
+            <div class="foot-panel-4-box border">
+                <div class="title">Amazon Music</div>
+                <div class="desc">Stream millions of songs</div>
+            </div>
+            <div class="foot-panel-4-box border">
+                <div class="title">Amazon Ads</div>
+                <div class="desc">Reach customers wherever they spend their time</div>
+            </div>
+            <div class="foot-panel-4-box border">
+                <div class="title">6pm</div>
+                <div class="desc">Score deals on fashion brands</div>
+            </div>
+            <div class="foot-panel-4-box border">
+                <div class="title">AbeBooks</div>
+                <div class="desc">Books, art & collectibles</div>
+            </div>
+            <div class="foot-panel-4-box border">
+                <div class="title">ACX</div>
+                <div class="desc">Audiobook Publishing Made Easy</div>
+            </div>
+            <div class="foot-panel-4-box border">
+                <div class="title">Sell on Amazon</div>
+                <div class="desc">Start a Selling Account</div>
+            </div>
+            <div class="foot-panel-4-box border">
+                <div class="title">Amazon Business</div>
+                <div class="desc">Everything For Your Business</div>
+            </div>
+            <div class="foot-panel-4-box border">
+                <div class="title">AmazonGlobal</div>
+                <div class="desc">Ship Orders Internationally</div>
+            </div>
+            <div class="foot-panel-4-box border">
+                <div class="title">Home Services</div>
+                <div class="desc">Experienced Pros Happiness Guarantee</div>
+            </div>
+            <div class="foot-panel-4-box border">
+                <div class="title">Amazon Web Services</div>
+                <div class="desc">Scalable Cloud Computing Services</div>
+            </div>
+            <div class="foot-panel-4-box border">
+                <div class="title">Audible</div>
+                <div class="desc">Listen to Books & Original Audio Performances</div>
+            </div>
+            <div class="foot-panel-4-box border">
+                <div class="title">Box Office Mojo</div>
+                <div class="desc">Find Movie Box Office Data</div>
+            </div>
+            <div class="foot-panel-4-box border">
+                <div class="title">Goodreads</div>
+                <div class="desc">Book reviews & recommendations</div>
+            </div>
+            <div class="foot-panel-4-box border">
+                <div class="title">IMDb</div>
+                <div class="desc">Movies, TV & Celebrities</div>
+            </div>
+            <div class="foot-panel-4-box border">
+                <div class="title">IMDbPro</div>
+                <div class="desc">Get Info Entertainment Professionals Need</div>
+            </div>
+            <div class="foot-panel-4-box border">
+                <div class="title">Kindle Direct Publishing</div>
+                <div class="desc">Indie Digital & Print Publishing Made Easy</div>
+            </div>
+            <div class="foot-panel-4-box border">
+                <div class="title">Prime Video Direct</div>
+                <div class="desc">Video Distribution Made Easy</div>
+            </div>
+            <div class="foot-panel-4-box border">
+                <div class="title">Shopbop</div>
+                <div class="desc">Designer Fashion Brands</div>
+            </div>
+            <div class="foot-panel-4-box border">
+                <div class="title">Woot!</div>
+                <div class="desc">Deals and Shenanigans</div>
+            </div>
+            <div class="foot-panel-4-box border">
+                <div class="title">Zappos</div>
+                <div class="desc">Shoes & Clothing</div>
+            </div>
+            <div class="foot-panel-4-box border">
+                <div class="title">Ring</div>
+                <div class="desc">Smart Home Security Systems</div>
+            </div>
+            <div class="foot-panel-4-box"></div>
+            <div class="foot-panel-4-box border">
+                <div class="title">eero WiFi</div>
+                <div class="desc">Stream 4K Video in Every Room</div>
+            </div>
+            <div class="foot-panel-4-box border">
+                <div class="title">Blink</div>
+                <div class="desc">Smart Security for Every Home</div>
+            </div>
+            <div class="foot-panel-4-box border">
+                <div class="title">Neighbors App</div>
+                <div class="desc">Real-Time Crime & Safety Alerts</div>
+            </div>
+            <div class="foot-panel-4-box border">
+                <div class="title">Amazon Subscription Boxes</div>
+                <div class="desc">Top subscription boxes – right to your door</div>
+            </div>
+            <div class="foot-panel-4-box border">
+                <div class="title">PillPack</div>
+                <div class="desc">Pharmacy Simplified</div>
+            </div>
+            <div class="foot-panel-4-box"></div>
+        </div>
+
+        <div class="foot-panel-5 title">
+            <div class="link-container">
+                <p>Conditions of Use</p>
+                <p>Privacy Notice</p>
+                <p>Consumer Health Data Privacy Disclosure</p>
+                <p>Your Ads Privacy Choices</p>
+            </div>
+            <div class="copyright">
+                <p>© 1996-2024, Amazon.com, Inc. or its affiliates</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
